--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -50,5 +50,10 @@
     "eslint-config-standard-jsx": "^6.0.2",
     "eslint-plugin-standard": "^4.0.0",
     "standard": "^12.0.1"
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
   }
 }
