--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -49,7 +49,8 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-jsx": "^6.0.2",
     "eslint-plugin-standard": "^4.0.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "release-it": "^10.0.7"
   },
   "standard": {
     "env": [
